--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -45,23 +45,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-              <th scope="row">1</th>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
+            <tr th:each="word, num: ${searchRankingList}" th:if="${num.count} < 7">
+              <th scope="row">[[${num.count}]] [[${word.getWord()}]]
+               <b th:if="${word.getRankingchange()} == 20">NEW</b>
+               <b th:unless="${word.getRankingchange()} == 20">[[${word.getRankingchange()}]]</b>
+              </th>
             </tr>
             </tbody>
           </table>
