--- a/src/main/resources/templates/home/login.html
+++ b/src/main/resources/templates/home/login.html
@@ -148,6 +148,9 @@
                <b th:unless="${word.getRankingchange()} == 20">[[${word.getRankingchange()}]]</b>
               </th>
             </tr>
+            <tr th:if="${searchRankingList.size()} == 0">
+            	<th>실시간 검색어가 없습니다</th>
+            </tr>
             </tbody>
           </table>
         </div>
