--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -30,6 +30,7 @@
 					<a class="dropdown-item" href="/yu/board/boardList?boardtype=자유게시판">자유게시판</a>
 					<a class="dropdown-item" href="/yu/board/boardList?boardtype=중고게시판">중고게시판</a>
 					<a class="dropdown-item" href="/yu/board/boardList?boardtype=정보게시판">정보게시판</a>
+					<a class="dropdown-item" href="/yu/board/boardList?boardtype=질문게시판">질문게시판</a>
 				</div>
 			</li>
 
@@ -152,6 +153,7 @@
 					<a href="/yu/board/boardList?boardtype=자유게시판">자유게시판</a><br>
 					<a href="/yu/board/boardList?boardtype=중고게시판">중고게시판</a><br>
 					<a href="/yu/board/boardList?boardtype=정보게시판">정보게시판</a><br>
+					<a href="/yu/board/boardList?boardtype=질문게시판">질문게시판</a><br>
 				</div>
 			</li>
 			<li class="nav-item">
