--- a/src/main/resources/templates/studentInfo/studentMyBoardList.html
+++ b/src/main/resources/templates/studentInfo/studentMyBoardList.html
@@ -14,7 +14,8 @@
         <table class="col-sm-auto table table-hover" style="margin:0">
           <thead>
             <tr>
-              <th style="text-align:center; width:55%">제목</th>
+              <th style="text-align:center; width:5%">번호</th>
+              <th style="text-align:center; width:50%">제목</th>
               <th style="text-align:center; width:15%">작성일</th>
               <th style="text-align:center; width:15%">위치</th>
               <th style="text-align:center; width:15%">세부위치</th>
@@ -22,6 +23,7 @@
           </thead>
 		<tbody id="tbody">
            <tr th:each="board :${myBoardList}">
+           <td style="text-align:center" th:text="${board.getBno()}"></td>
            <td>
            		<a th:if="${board.getType()} == '게시판'" th:href="@{'/yu/board/boardView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a>
            		<a th:if="${board.getType()} == '매칭'" th:href="@{'/yu/matching/matchingView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a>
