--- a/src/main/resources/templates/lectureevaluation/lectureEvaluationList.html
+++ b/src/main/resources/templates/lectureevaluation/lectureEvaluationList.html
@@ -55,10 +55,10 @@
                     <option value="6month">6개월</option>
                   </select>
                   <select id="searchOption" class="search-option">
-                    <option value="all">제목+내용</option>
-                    <option value="title">제목</option>
+                    <option value="title">강의명</option>
+                    <option value="professor">교수명</option>
+                    <option value="content">내용</option>
                     <option value="writer">글작성자</option>
-                    <option value="commentContent">댓글내용</option>
                   </select>
                 </div>
                 <!-- 검색어 입력창 -->
