--- a/src/main/resources/templates/lectureevaluation/lectureEvaluationInsert.html
+++ b/src/main/resources/templates/lectureevaluation/lectureEvaluationInsert.html
@@ -41,7 +41,7 @@
               <span class="star star_right"></span>
             </div>
             <div class="form-group">
-              <textarea class="form-control nonesize" id="content" name="content"  placeholder="내용을 입력하시오"></textarea>
+              <textarea class="form-control nonesize" id="content" name="content" maxlength="500" placeholder="내용을 입력하시오"></textarea>
             </div>
                     <div id="button_group" class="btn-form">
                       <button type="button" class="btn btn-primary" onclick="lectureUpdate()" style="margin-right:5px;">등록</button>
