--- a/src/main/resources/templates/lectureevaluation/lectureEvaluationView.html
+++ b/src/main/resources/templates/lectureevaluation/lectureEvaluationView.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
+
+<th:block layout:fragment="title">
+  <title>YU LectureEvaluation View</title>
+</th:block>
+
+<th:block layout:fragment="article">
       <div class="container-fluid">
 
         <div class="card bg-light mt-3">
@@ -45,146 +51,6 @@
             </div>
           </div>
         </div>
-        <div class="card bg-light mt-3">
-          <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs" id="tabs">
-              <li class="nav-item"><a class="nav-link active" href="#recent" data-toggle="tab">최신 순</a></li>
-              <li class="nav-item"><a class="nav-link" href="#high" data-toggle="tab">인기 ↑</a></li>
-              <li class="nav-item"><a class="nav-link" href="#row" data-toggle="tab">인기 ↓</a></li>
-            </ul>
-          </div>
-          <div class="tab-content">
-            <div class="tab-pane active" id="recent">
-              <!--최신순-->
-              <div class="card-header bg-light">
-
-                <div class="card-body">
-                  <!--1-->
-                  <div class="row">
-                    <div class="col-6 text-left">
-                      <h5 class="card-title">
-                        <span style="color: yellow;">★★★★★</span> /&nbsp;<small>2020.10.3</small>
-                      </h5>
-                    </div>
-                    <div class="col-6 text-right">
-                      <a onclick="return confirm('좋아요를 누르시겠습니까?')" href="#">좋아요</a><span style="color: red;">30</span>
-                      <a onclick="return confirm('싫어요를 누르시겠습니까?')" href="#">싫어요</a><span style="color: red;">30</span>
-                    </div>
-                  </div>
-
-                  <p class="card-text text-left">짱
-                  <p>
-                  <div class="col text-right">
-                    <a onclick="return confirm('신고하시겠습니까?')" href="#"><span style="color: red;">신고하기</span></a>
-                  </div>
-                </div>
-
-                <div class="card-body">
-                  <!--2-->
-                  <div class="row">
-                    <div class="col-6 text-left">
-                      <h5 class="card-title">
-                        <span style="color: yellow;">★★★★★</span> /&nbsp;<small>2020.10.2</small>
-                      </h5>
-                    </div>
-                    <div class="col-6 text-right">
-                      <a onclick="return confirm('좋아요를 누르시겠습니까?')" href="#">좋아요</a><span style="color: red;">50</span>
-                      <a onclick="return confirm('싫어요를 누르시겠습니까?')" href="#">싫어요</a><span style="color: red;">1</span>
-                    </div>
-                  </div>
-
-                  <p class="card-text text-left">너무좋아요!!</p>
-                  <div class="col text-right">
-                    <a onclick="return confirm('신고하시겠습니까?')" href="#"><span style="color: red;">신고하기</span></a>
-                  </div>
-                </div>
-
-                <div class="card-body">
-                  <!--3-->
-                  <div class="row">
-                    <div class="col-6 text-left">
-                      <h5 class="card-title">
-                        <span style="color: yellow;">★★★★★</span> /&nbsp;<small>2020.10.2</small>
-                      </h5>
-                    </div>
-                    <div class="col-6 text-right">
-                      <a onclick="return confirm('좋아요를 누르시겠습니까?')" href="#">좋아요</a><span style="color: red;">1</span>
-                      <a onclick="return confirm('싫어요를 누르시겠습니까?')" href="#">싫어요</a><span style="color: red;">50</span>
-                    </div>
-                  </div>
-
-                  <p class="card-text text-left">너무싫어요!!</p>
-                  <div class="col text-right">
-                    <a onclick="return confirm('신고하시겠습니까?')" href="#"><span style="color: red;">신고하기</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane fade" id="high">
-              <!--인기 업순-->
-              <div class="card-header bg-light">
-                <div class="card-body">
-                  <!--1-->
-                  <div class="row">
-                    <div class="col-6 text-left">
-                      <h5 class="card-title">
-                        <span style="color: yellow;">★★★★★</span> /&nbsp;<small>2020.10.3</small>
-                      </h5>
-                    </div>
-                    <div class="col-6 text-right">
-                      <a onclick="return confirm('좋아요를 누르시겠습니까?')" href="#">좋아요</a><span style="color: red;">50</span>
-                      <a onclick="return confirm('싫어요를 누르시겠습니까?')" href="#">싫어요</a><span style="color: red;">1</span>
-                    </div>
-                  </div>
-
-                  <p class="card-text text-left">너무좋아요!!
-                  <p>
-                  <div class="col text-right">
-                    <a onclick="return confirm('신고하시겠습니까?')" href="#"><span style="color: red;">신고하기</span></a>
-                  </div>
-                </div>
-
-                <div class="card-body">
-                  <!--2-->
-                  <div class="row">
-                    <div class="col-6 text-left">
-                      <h5 class="card-title">
-                        <span style="color: yellow;">★★★★★</span> /&nbsp;<small>2020.10.2</small>
-                      </h5>
-                    </div>
-                    <div class="col-6 text-right">
-                      <a onclick="return confirm('좋아요를 누르시겠습니까?')" href="#">좋아요</a><span style="color: red;">30</span>
-                      <a onclick="return confirm('싫어요를 누르시겠습니까?')" href="#">싫어요</a><span style="color: red;">30</span>
-                    </div>
-                  </div>
-
-                  <p class="card-text text-left">짱</p>
-                  <div class="col text-right">
-                    <a onclick="return confirm('신고하시겠습니까?')" href="#"><span style="color: red;">신고하기</span></a>
-                  </div>
-                </div>
-
-                <div class="card-body">
-                  <!--3-->
-                  <div class="row">
-                    <div class="col-6 text-left">
-                      <h5 class="card-title">
-                        <span style="color: yellow;">★★★★★</span> /&nbsp;<small>2020.10.2</small>
-                      </h5>
-                    </div>
-                    <div class="col-6 text-right">
-                      <a onclick="return confirm('좋아요를 누르시겠습니까?')" href="#">좋아요</a><span style="color: red;">1</span>
-                      <a onclick="return confirm('싫어요를 누르시겠습니까?')" href="#">싫어요</a><span style="color: red;">50</span>
-                    </div>
-                  </div>
-
-                  <p class="card-text text-left">너무싫어요!!</p>
-                  <div class="col text-right">
-                    <a onclick="return confirm('신고하시겠습니까?')" href="#"><span style="color: red;">신고하기</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
 
             <div class="tab-pane fade" id="row">
               <!--인기 로우 순-->
@@ -195,11 +61,11 @@
               </div>
             </div>
           </div>
-        </div>
         <button type="button" class="btn-blue float-right" style="margin-top : 10px;" onclick="location.href='class.html'">목록으로</button>
-      </div>
-    </div>
 
+
+</th:block>
+<th:block layout:fragment="script">
   <script>
     $('a[data-toggle="tab"]').click(function(e) {
       e.preventDefault();
@@ -216,6 +82,6 @@
       $('a[data-toggle="tab"][href="' + selectedTab + '"]').tab('show');
     }
   </script>
-</body>
+</th:block>
 
 </html>
