--- a/src/main/resources/templates/matching/matchingList.html
+++ b/src/main/resources/templates/matching/matchingList.html
@@ -6,6 +6,7 @@
 </th:block>
 
 <th:block layout:fragment="article">
+    <div id="article">
       <div class="container-fluid">
         <div class="col-sm-auto article-header">
           <h2 style="color:red" th:text=${boardtype}></h2>
@@ -78,9 +79,10 @@
         </li>
     </ul>
     </nav>
-    
-           <div class="search-wrap clear">
+
+           <div class="search-wrap1 clear">
               <!-- 옵션 -->
+               <form class="input-group" onsubmit="return false;">
               <div class="search-option-wrap fl">
                 <select id="searchDate" class="search-date">
                   <option value="all">전체기간</option>
@@ -96,12 +98,12 @@
                 </select>
               </div>
               <!-- 검색어 입력창 -->
-              <div class="search-input-wrap fl">
-                <input id="searchBox" class="form-control mr-sm-2" onKeypress = "if(event.keyCode==13) {return searchMatching()}" placeholder="검색어를 입력해 주세요">
-              </div>
-              <button class="btn glass"><img th:src="@{/images/돋보기.png}" onClick="return searchMatching()" class="button-image"></button>
-          </div>
+                <input id="searchBox" class="form-control " onKeypress = "if(event.keyCode==13) {return searchMatching()}" placeholder="검색어를 입력해 주세요"  style="border-radius: 5px; border: 2px solid #4a57a8;">
+                   <img th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchMatching()">
+               </form>
+           </div>
       </div>
+    </div>
     <!-- /.card-content -->
 </th:block>
 
