--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -10857,7 +10857,6 @@ textarea {
 }
 
 .search-option-wrap {
-    width: 203px;
     height: 36px;
     border: 1px solid #3c4790;
     background: #4a57a8;
@@ -10867,7 +10866,6 @@ textarea {
 }
 
 .search-option-wrap1 {
-  width: 305px;
   height: 36px;
   border: 1px solid #3c4790;
   background: #4a57a8;
@@ -10880,7 +10878,6 @@ textarea {
 .search-input-wrap {
   width:600px;
   height: 36px;
-
 }
 
 .search-option-wrap {
@@ -10891,6 +10888,14 @@ textarea {
 .search-option-wrap1 > .search-option, .search-option-wrap1 > .search-date, .search-option-wrap1 > .search-type {
   border-radius: 3px;
   margin-top: 5px;
+}
+
+.search-option-wrap > .search-date, .search-option-wrap1 > .search-date{
+  margin-left:5px;
+}
+
+.search-option-wrap > .search-option, .search-option-wrap1 > .search-option{
+  margin-right: 5px;
 }
 
 .search-option-wrap .fl {
