--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -36,9 +36,32 @@
 
 			<li class="nav-item"><a class="nav-link" href = "#">통계그래프</a></li>
 			<li>
-				<form class="input-group">
-					<input id="totalSearchBoxM" class="form-control mr-sm-3"  maxlength = "100" onKeypress = "if(event.keyCode==13) {return searchTotal()}" type="search" placeholder="검색어를 입력해주세요" aria-label="Search">
-					<button class="btn glass" type="button" onClick = "return searchTotal()"><img th:src="@{/images/돋보기.png}" width="100%"></button>
+				<form class="input-group" onsubmit="return false;">
+					<div class="search-option-wrap1 fl" style="margin: 0px auto;">
+						<select id="totalSearchDate" class="search-date">
+							<option value="all">전체기간</option>
+							<option value="1week">1주</option>
+							<option value="1month">1개월</option>
+							<option value="6month">6개월</option>
+						</select>
+						<select id="totalSearchType" class="search-type">
+							<option value="all">전체유형</option>
+							<option value="board">게시판</option>
+							<option value="matching">매칭</option>
+						</select>
+						<select id="totalSearchOption" class="search-option">
+							<option value="all">제목+내용</option>
+							<option value="title">제목</option>
+							<option value="writer">글작성자</option>
+							<option value="commentContent">댓글내용</option>
+						</select>
+					</div>
+				</form>
+			</li>
+			<li>
+				<form class="input-group" onsubmit="return false;">
+					<input id="totalSearchBox" class="form-control" maxlength = "100" onKeypress = "if(event.keyCode==13) {return searchTotal()}" type="search" placeholder="검색어를 입력해 주세요" aria-label="Search" style="border-radius: 5px; border: 2px solid #4a57a8;">
+					<img th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchTotal()">
 				</form>
 			</li>
 			<li th:if="${session.studentInfo} == null">
